samples/_failures_safe/1761283036_2c6ed5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_572ad768.c: In function ‘main’:
./samples/SAFE/__tmp_572ad768.c:145:74: error: expected ‘)’ at end of input
  145 |     size_t decompressed_size = decompress_rle(compressed, compressed_size
      |                                              ~                           ^
      |                                                                          )
./samples/SAFE/__tmp_572ad768.c:145:32: error: too few arguments to function ‘decompress_rle’
  145 |     size_t decompressed_size = decompress_rle(compressed, compressed_size
      |                                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_572ad768.c:91:8: note: declared here
   91 | size_t decompress_rle(const unsigned char *input, size_t input_len, unsigned char *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_572ad768.c:145:5: error: expected declaration or statement at end of input
  145 |     size_t decompressed_size = decompress_rle(compressed, compressed_size
      |     ^~~~~~
